# fabula-engine

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/ai/: route.ts
app/api/assets/: route.ts
components/: AIAssistant.tsx  AssetStudio.tsx  Dashboard.tsx  DesignTemplates.tsx  Editor.tsx  GameCanvas.tsx  LoadingScreen.tsx  NewProjectWizard.tsx  ReleaseChecklist.tsx  Sidebar.tsx
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
lib/: assetGen.ts  gameRuntime.ts  genres.ts  phrases.ts  release.ts  store.ts  templates.ts
